--- a/apache_logs/templates/apache_logs/apachelog_list.html
+++ b/apache_logs/templates/apache_logs/apachelog_list.html
@@ -57,7 +57,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    {% for key, value in methods.items %}
+                    {% for key, value in methods %}
                         <tr>
                             <td>{% if key|length > 10 %}{{ key|slice:":10" }} . . .{% else %}{{ key }}{% endif %}</td>
                             <td>{{ value }}</td>
@@ -74,7 +74,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    {% for key, value in top.items %}
+                    {% for key, value in top %}
                             <tr>
                                 <td>{{ key }}</td>
                                 <td>{{ value }}</td>
